# logmetrics

./: LICENSE  Main.hs  README.md  default.nix  logmetrics.cabal  paths.nix  shell.nix
test/: default.nix  logmetrics.nix  monitored.nix  simple.nix
test/pkgs/elasticdump/: default.nix  generated.nix
