name:                logmetrics
version:             0.1.0
author:              David Waern
maintainer:          david.waern@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable logmetrics
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -O3
  build-depends:       base,
                       extra,
                       transformers,
                       bytestring,
                       unordered-containers,
                       text,
                       lens,
                       wreq,
                       systemd,
                       warp,
                       scotty,
                       aeson,
                       stm,
                       string-conv,
                       hashable,
                       list-t,
                       stm-containers,
                       time,
                       zlib,
                       pipes,
                       pipes-bytestring,
                       pipes-zlib,
                       pipes-http
  default-language:    Haskell2010
