name:                logmetrics
version:             0.1.0
author:              David Waern
maintainer:          david.waern@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable logmetrics
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -O3
  build-depends:       aeson,
                       base,
                       bytestring,
                       extra,
                       hashable,
                       lens,
                       list-t,
                       pipes,
                       pipes-bytestring,
                       pipes-http,
                       pipes-zlib,
                       scotty,
                       stm,
                       stm-containers,
                       string-conv,
                       systemd,
                       text,
                       time,
                       transformers,
                       unordered-containers,
                       warp,
                       wreq,
                       zlib
  default-language:    Haskell2010
